--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
+# title: no style, please! # name of the site
+title: 宋一's blog !
+# author: Riccardo Graziosi # name of site's author
+author: Cyber-Song
+# email: riccardo.graziosi97@gmail.com # email of site's author
+email: Cyber-Song@163.com
 url: https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+# baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   A (nearly) no-CSS, fast, minimalist Jekyll theme.
 
