--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're sit
 # description: > # description of the site (multiple lines allowed)
 #  A (nearly) no-CSS, fast, minimalist Jekyll theme.
 description: > # description of the site (multiple lines allowed)
-  亲爱的陌生人，祝您所求皆所愿，所行化坦途，多喜乐，常安宁；
+  \xe4\xba\xb2\xe7\x88\xb1\xe7\x9a\x84\xe9\x99\x8c\xe7\x94\x9f\xe4\xba\xba\xef\xbc\x8c\xe7\xa5\x9d\xe6\x82\xa8\xe6\x89\x80\xe6\xb1\x82\xe7\x9a\x86\xe6\x89\x80\xe6\x84\xbf\xef\xbc\x8c\xe6\x89\x80\xe8\xa1\x8c\xe5\x8c\x96\xe5\x9d\xa6\xe9\x80\x94\xef\xbc\x8c\xe5\xa4\x9a\xe5\x96\x9c\xe4\xb9\x90\xef\xbc\x8c\xe5\xb8\xb8\xe5\xae\x89\xe5\xae\x81\xef\xbc\x9b
 
 permalink: /:slug.html
 
